<resources>
    <string name="app_name">Orientacja UDP</string>
    <string name="author">O autorze</string>

    <string name="status">Status:</string>
    <string name="disconnected">rozłączony</string>
    <string name="connecting">łączenie&#8230;</string>
    <string name="sending">wysyłanie&#8230;</string>

    <string name="placeholder">Brak czujnika</string>

    <string name="magnetometer">Magnetometr:</string>
    <string name="accelerometer">Akcelerometr:</string>
    <string name="gyroscope">Żyroskop:</string>

    <string name="X">X:</string>
    <string name="Y">Y:</string>
    <string name="Z">Z:</string>

    <string name="default_ip">192.168.0.100</string>
    <string name="default_port">9876</string>

    <string name="connect_settings">Ustawienia połączenia</string>
    <string name="connect">Połącz</string>
    <string name="address">Adres</string>
    <string name="port">Port</string>
    <string name="cancel">Anuluj</string>
    <string name="ok">Ok</string>

    <string name="blank_address">Podaj adres</string>
    <string name="blank_port">Podaj port</string>

    <string name="author_description">Autor: Marcin Stramowski\n\nPraca inżynierska\n\n
        Temat: Sterowanie on-line obiektem wirtualnym w przestrzeni 3D z wykorzystaniem
        sygnałów urządzenia mobilnego</string>
    
    <string name="wait_wifi">Poczekaj na połącznie z siecią.</string>
    <string name="on_and_wait_wifi">Włączam WIFI...\nPoczekaj na połącznie z siecią.</string>

    <string name="algorithm_raw_data">Surowe dane</string>
    <string name="algorithm_accelerometer">Akcelerometr</string>
    <string name="algorithm_complementary">Filtr komplementarny</string>
    <string name="algorithm_madgwick">Filtr Madgwicka (A M G)</string>
    <string name="algorithm_madgwick_IMU">Filtr Madgwicka (A G)</string>
    <string name="algorithm_madgwick_IMU_kat">Filtr Madgwicka (A G) (Kąt)</string>
    <string name="calculations_tv">Urządzenie liczące:</string>
    <string name="calculations_smartphone">Smartfon</string>
    <string name="calculations_computer">Komputer</string>
    <string name="algorithm_tv">Metoda obliczeń:</string>
</resources>

