<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/outer_padding"
    android:background="@color/main_background_light"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

        <RelativeLayout
            android:id="@+id/status_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_inner_light"
            android:paddingTop="@dimen/inner_padding_Top"
            android:paddingBottom="@dimen/inner_padding_Bottom"
            android:paddingLeft="@dimen/inner_padding_Left"
            android:paddingRight="@dimen/inner_padding_Right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/statusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/status"
                android:textColor="@color/dark_grey"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/statusText"
                android:layout_alignBaseline="@id/statusText"
                android:paddingLeft="6dp"
                android:text="@string/disconnected"
                android:textColor="@color/dark_grey"
                android:textSize="22sp"
                android:layout_alignParentTop="true"/>
        </RelativeLayout>

        <View
            android:id="@+id/main_shadow_1"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/status_view"
            android:background="@color/main_shadow_light"
            android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:id="@+id/accelerometer_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_shadow_1"
        android:background="@color/main_inner_light"
        android:paddingTop="@dimen/inner_padding_Top"
        android:paddingBottom="@dimen/inner_padding_Bottom"
        android:paddingLeft="@dimen/inner_padding_Left"
        android:paddingRight="@dimen/inner_padding_Right"
        android:orientation="vertical">

        <TextView
            android:id="@+id/accelerometerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingBottom="5dp"
            android:text="@string/accelerometer"
            android:textColor="@color/dark_grey"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/accelerometerXText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/accelerometerText"
            android:paddingLeft="6dp"
            android:text="@string/X"
            android:textColor="@color/dark_grey"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/accelerometerX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:paddingLeft="6dp"
            android:singleLine="true"
            android:textColor="@color/dark_grey"
            android:textSize="22sp"
            android:layout_toRightOf="@+id/accelerometerXText"
            android:layout_toEndOf="@id/accelerometerXText"
            android:layout_alignBaseline="@+id/accelerometerXText" />

        <TextView
            android:id="@+id/accelerometerYText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/accelerometerXText"
            android:paddingLeft="6dp"
            android:text="@string/Y"
            android:textColor="@color/dark_grey"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/accelerometerY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:paddingLeft="6dp"
            android:singleLine="true"
            android:textColor="@color/dark_grey"
            android:textSize="22sp"
            android:layout_toRightOf="@+id/accelerometerYText"
            android:layout_toEndOf="@id/accelerometerYText"
            android:layout_alignBaseline="@+id/accelerometerYText" />

        <TextView
            android:id="@+id/accelerometerZText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/accelerometerYText"
            android:paddingLeft="6dp"
            android:text="@string/Z"
            android:textColor="@color/dark_grey"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/accelerometerZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:paddingLeft="6dp"
            android:singleLine="true"
            android:textColor="@color/dark_grey"
            android:textSize="22sp"
            android:layout_toRightOf="@+id/accelerometerZText"
            android:layout_toEndOf="@id/accelerometerZText"
            android:layout_alignBaseline="@+id/accelerometerZText" />


    </RelativeLayout>

    <View
        android:id="@+id/main_shadow_2"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/accelerometer_view"
        android:background="@color/main_shadow_light"
        android:layout_marginBottom="10dp"/>



</RelativeLayout>
